corrigindo criacao de imagem